--- a/OfficeInstaller.csproj
+++ b/OfficeInstaller.csproj
@@ -2,16 +2,20 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="checkmark.png" />
+    <None Remove="form-background.jpg" />
     <None Remove="microsoft-office.ico" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="checkmark.png" />
+    <Resource Include="form-background.jpg" />
     <Resource Include="microsoft-office.ico" />
   </ItemGroup>
 
