--- a/.github/workflows/zip-and-release.yml
+++ b/.github/workflows/zip-and-release.yml
@@ -43,14 +43,13 @@ jobs:
     - name: Zip published folder
       run: zip -r Release.zip . -i bin/publish/
 
-    - name: Create Tag
+    - name: Create Tag using GitHub CLI
       run: |
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
-        git tag v${{ env.VERSION }}
-        git push https://${{ secrets.MY_GITHUB_TOKEN }}@github.com/Paul1404/OfficeInstaller.git v${{ env.VERSION }}
+        gh repo create-tag v${{ env.VERSION }}
       env:
-        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_CLI_TRUSTED: "true"
+
 
     - name: Create Release and Upload Asset
       run: |
