--- a/.github/workflows/zip-and-release.yml
+++ b/.github/workflows/zip-and-release.yml
@@ -43,12 +43,15 @@ jobs:
     - name: Zip published folder
       run: zip -r Release.zip . -i bin/publish/
 
-    - name: Create Tag using GitHub CLI
+    - name: Create Tag
       run: |
-        gh repo create-tag v${{ env.VERSION }}
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
+        git tag v${{ env.VERSION }}
+        git push origin v${{ env.VERSION }}
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GH_CLI_TRUSTED: "true"
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
 
     - name: Create Release and Upload Asset
