--- a/OfficeInstaller.csproj
+++ b/OfficeInstaller.csproj
@@ -14,18 +14,30 @@
     <None Remove="checkmark.png" />
     <None Remove="form-background.jpg" />
     <None Remove="install_icon.png" />
+    <None Remove="LICENSE.txt" />
     <None Remove="microsoft-office.ico" />
+    <None Remove="README.md" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="microsoft-office.ico" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Resource Include="checkmark.png" />
-    <Resource Include="form-background.jpg" />
-    <Resource Include="install_icon.png" />
-    <Resource Include="microsoft-office.ico" />
+    <Resource Include="checkmark.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="form-background.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="install_icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="microsoft-office.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
