--- a/.gitattributes
+++ b/.gitattributes
@@ -59,3 +59,4 @@
 #*.RTF   diff=astextplain
 *.deploy filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
+OfficeInstaller.exe filter=lfs diff=lfs merge=lfs -text
